@@ -71,11 +71,14 @@ private:
 class ClazyStandaloneASTAction : public clang::ASTFrontendAction
 {
 public:
-    explicit ClazyStandaloneASTAction(const std::string &checkList, ClazyContext::ClazyOptions = ClazyContext::ClazyOption_None);
+    explicit ClazyStandaloneASTAction(const std::string &checkList,
+                                      const std::string &headerFilter,
+                                      ClazyContext::ClazyOptions = ClazyContext::ClazyOption_None);
 protected:
     std::unique_ptr<clang::ASTConsumer> CreateASTConsumer(clang::CompilerInstance &ci, llvm::StringRef) override;
 private:
-    std::string m_checkList;
+    const std::string m_checkList;
+    const std::string m_headerFilter;
     const ClazyContext::ClazyOptions m_options;
 };
 
