@@ -1,0 +1,7 @@
+#include "header_filter_foo.h"
+#include "header_filter_bar.h"
+
+void t()
+{
+    QDateTime::currentDateTime().toTime_t();
+}
