@@ -1,0 +1,6 @@
+#include <QtCore/QDateTime>
+
+void test2()
+{
+    QDateTime::currentDateTime().toTime_t();
+}
