@@ -72,3 +72,5 @@
     qstring-varargs
   - auto-unexpected-qstringbuilder now also warns for lambdas returning QStringBuilder
   - performance optimizations
+  - Added -header-filter=<regex> option to clazy-standalone. Only headers matching the regexp will have warnings,
+    besides the .cpp file from the translation unit, which is never filtered out.
